--- a/issues/1195/meta.yaml
+++ b/issues/1195/meta.yaml
@@ -1,3 +1,3 @@
 id: 1195
-publication_date: 2020-05-01
-cutoff_date: 2020-04-15
+publication_date: 2020-05-01T00:00:00.000Z
+cutoff_date: 2020-04-15T00:00:00.000Z
