--- a/issues/1063/meta.yaml
+++ b/issues/1063/meta.yaml
@@ -1,3 +1,3 @@
 id: 1063
-cutoff_date: 2014-10-20T17:20:29.100Z
-publication_date: 2014-11-01T18:20:29.100Z
+cutoff_date: 2014-10-20
+publication_date: 2014-11-01
