content(1162): Add annexed dataset

--- a/issues/1162/annexes.yaml
+++ b/issues/1162/annexes.yaml
@@ -1,2 +1,537 @@
 E212_MNC:
-  position_on: 2018-12-15
+  position_on: 2018-12-15T00:00:00.000Z
+  datasets:
+    T-SP-E.212B-2018.main:
+      meta:
+        schema:
+          type: index
+          item:
+            type: object
+            fields:
+              - id: mcc_mnc_codes
+                required: true
+                label:
+                  en: >-
+                    Shared Mobile Country Codes (MCC) for other purposes and
+                    their respective Mobile Network Codes (MNC)
+                  fr: >-
+                    Indicatifs de pays du mobile (MCC) partagés pour d'autres
+                    usages et codes de réseau du mobile (MNC) qui leur sont
+                    associés
+                  es: >-
+                    MCC compartidos para otras utilizaciones y sus respectivos
+                    indicativos de red para el servicio móvil (MNC)
+                  ru: >-
+                    Общие коды страны в системе подвижной связи (MCC),
+                    предназначенные для иных целей, и их соответствующие коды
+                    сетей подвижной связи (MNC)
+                  zh: 用于其他用途的共用移动国家代码（MCC）及其各自的移动网络代码（MNC）
+                  ar: >-
+                    الرموز الدليلية القُطرية للاتصالات المتنقلة (MCC) المشتركة
+                    للأغراض الأخرى والرموز الدليلية للشبكات المتنقلة (MNC)
+                    الخاصة بها
+                type: text
+              - id: applicant
+                required: true
+                label:
+                  en: Applicant/Network
+                  es: Solicitante/Red
+                  fr: Demandeur/Réseau
+                  ru: Заявитель/сеть
+                  zh: 申请人/网络
+                  ar: مقدم الطلب/الشبكة
+                type: text
+              - id: purpose
+                required: true
+                label:
+                  en: Purpose
+                  es: utilizaciones
+                  fr: partagés
+                  ru: целей
+                  zh: 用途
+                  ar: هدف
+                type: translated-text
+      contents:
+        902 01:
+          mcc_mnc_codes: 902 01
+          applicant: MulteFire Alliance
+          purpose:
+            en: shared code
+            fr: indicatif partagé
+            es: indicativo compartido
+            ru: Общий код
+            zh: 共用代码
+            ar: رمز مشترك
+        991 01:
+          mcc_mnc_codes: 991 01
+          applicant: World’s Global Telecom
+          purpose:
+            en: >-
+              Trial of a proposed new international telecommunication service,
+              shared code
+            fr: >-
+              Essai d'un nouveau service proposé de télécommunications
+              internationales, indicatif partagé
+            es: >-
+              Prueba de un nuevo servicio de telecomunicación internacional
+              propuesto, indicativo compartido
+            ru: >-
+              Испытание предлагаемой новой услуги международной электросвязи,
+              общий код
+            zh: 拟议新国际电信业务试验，共享代码
+            ar: >-
+              تجربة خدمة مقترحة جديدة للمراسلات العمومية للاتصالات الدولية، رمز
+              مشترك
+          temporary_assignment_to: 2020-01-13T15:00:00.000Z
+    T-SP-E.212B-2018.et:
+      meta:
+        title:
+          en: >-
+            Extra-territorial use* of MCC/MNC, Annex E to Recommendation ITU-T
+            E.212
+          fr: >-
+            Utilisation extraterritoriale* du MCC/MNC, Annexe E à la
+            Recommandation UIT-T E.212
+          es: >-
+            Utilización extraterritorial* de MCC/MNC, Anexo E a la Recomendación
+            UIT-T E.212
+          ru: >-
+            Экстерриториальное использование* кодов MCC/MNC, Приложение E к
+            Рекомендации МСЭ-T E.212
+          zh: ITU-T E.212建议书附件E，境外使用*MCC/MNC
+          ar: >-
+            استعمال الرموز MCC/MNC خارج الأراضي الإقليمية*، الملحق E بالتوصية
+            ITU-T E.212
+        schema:
+          type: array
+          item:
+            type: object
+            fields:
+              - id: country_or_area
+                required: true
+                label:
+                  en: Country or Geographical Area
+                  fr: Pays ou Zone géographique
+                  es: País o Zona geografica
+                  ru: Страна или географическая зона
+                  zh: 国家或地理区域
+                  ar: |-
+                    البلد
+                    أو المنطقة الجغرافية
+                type: translated-text
+              - id: mcc_mnc
+                required: true
+                label:
+                  en: MCC + MNC**
+                  fr: MCC + MNC**
+                  es: MCC + MNC**
+                  ru: MCC + MNC**
+                  zh: MCC + MNC**
+                  ar: '**MNC + MCC'
+                type: text
+              - id: msin_range
+                required: true
+                label:
+                  en: MSIN range***
+                  fr: Série de numéros MSIN***
+                  es: Gama de MSIN***
+                  ru: Диапазон MSIN***
+                  zh: 移动用户识别码号段***
+                  ar: مدى رقم هوية المشترك المتنقل (MSIN)***
+                type: text
+              - id: operator_network
+                required: true
+                label:
+                  en: Operator/Network
+                  fr: Nom de Réseau/Opérateur
+                  es: Nombre de la Red/Operador
+                  ru: Оператор/сеть
+                  zh: 运营商/网络
+                  ar: المشغل/الشبكة
+                type: text
+      contents:
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 01
+          msin_range: 0000000000-0099999999
+          operator_network: Oranges
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 01
+          msin_range: 0200000000-9999999999
+          operator_network: Orange
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 01
+          msin_range: 0100000000-0199999999
+          operator_network: Orange/Monaco Télécom
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 10
+          msin_range: 0000000000 - 2654099999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 10
+          msin_range: 2654200000 - 2654299999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 10
+          msin_range: 2654400000 - 2754099999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 10
+          msin_range: 2754200000 - 2754299999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 10
+          msin_range: 2754400000 - 9999999999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 10
+          msin_range: 2654100000 - 2654199999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 10
+          msin_range: 2654300000 - 2654399999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 10
+          msin_range: 2754100000 - 2754199999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 10
+          msin_range: 2754300000 - 2754399999
+          operator_network: Société Française du Radiotéléphone
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 20
+          msin_range: 0000000000 - 0055499999
+          operator_network: Bouygues Telecom
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 20
+          msin_range: 0055600000 - 2007199999
+          operator_network: Bouygues Telecom
+        - country_or_area:
+            en: France
+            fr: France
+            es: Francia
+            ru: Франция
+            zh: 法国
+            ar: فرنسا
+          country_type: A
+          mcc_mnc: 208 20
+          msin_range: 2007300000 - 9999999999
+          operator_network: Bouygues Telecom
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 20
+          msin_range: 0055500000 - 0055599999
+          operator_network: Bouygues Telecom
+        - country_or_area:
+            en: Monaco
+            fr: Monaco
+            es: Mónaco
+            ru: Монако
+            zh: 摩纳哥
+            ar: موناكو
+          country_type: B
+          mcc_mnc: 208 20
+          msin_range: 2007200000 - 2007299999
+          operator_network: Bouygues Telecom
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: 20-35
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '38'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: 40-44
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '47'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '52'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '59'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: 60-62
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '72'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '77'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Switzerland
+            fr: Suisse
+            es: Suiza
+            ru: Швейцария
+            zh: 瑞士
+            ar: سويسرا
+          country_type: A
+          mcc_mnc: 228 01
+          msin_range: '80'
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Liechtenstein
+            fr: Liechtenstein
+            es: Liechtenstein
+            ru: Лихтенштейн
+            zh: 列支敦士登
+            ar: ليختنشتاين
+          country_type: B
+          mcc_mnc: 228 01
+          msin_range: 37XXXXXXXX
+          operator_network: Swisscom Schweiz AG
+        - country_or_area:
+            en: Luxembourg
+            fr: Luxembourg
+            es: Luxemburgo
+            ru: Люксембург
+            zh: 卢森堡
+            ar: أيسلندا
+          country_type: A
+          mcc_mnc: 270 77
+          msin_range: 000 x xxx xxx
+          operator_network: Tango S.A.
+        - country_or_area:
+            en: Belgium
+            fr: Belgique
+            es: Bélgica
+            ru: Бельгия
+            zh: 比利时
+            ar: بلجيكا
+          country_type: B
+          mcc_mnc: 270 77
+          msin_range: 800 x xxx xxx
+          operator_network: Tango S.A.
+        - country_or_area:
+            en: Belgium
+            fr: Belgique
+            es: Bélgica
+            ru: Бельгия
+            zh: 比利时
+            ar: بلجيكا
+          country_type: B
+          mcc_mnc: 270 77
+          msin_range: 801 x xxx xxx
+          operator_network: Tango S.A.
+        - country_or_area:
+            en: Iceland
+            fr: Islande
+            es: Islandia
+            ru: Исландия
+            zh: 冰岛
+            ar: أيسلندا
+          country_type: A
+          mcc_mnc: 274 02
+          msin_range: 0-8
+          operator_network: Og fjarskipti hf (Vodafone Iceland)
+        - country_or_area:
+            en: Faroe Islands
+            fr: Féroé (Iles)
+            es: Feroe (Islas)
+            ru: Фарерские Острова
+            zh: 法罗群岛
+            ar: جزر فارويه
+          country_type: B
+          mcc_mnc: 274 02
+          msin_range: '9'
+          operator_network: 'P/F Kall, reg. No 2868 (Vodafone FO)'
+        - country_or_area:
+            en: Fiji
+            fr: Fidji
+            es: Fiji
+            ru: Фиджи
+            zh: 斐济
+            ar: فيجي
+          country_type: A
+          mcc_mnc: 542 02
+          msin_range: 00xxxxxxxx
+          operator_network: Digicel (Fiji) Ltd
+        - country_or_area:
+            en: Nauru
+            fr: Nauru
+            es: Nauru
+            ru: Науру
+            zh: 瑙鲁
+            ar: ناورو
+          country_type: B
+          mcc_mnc: 542 02
+          msin_range: 0840xxxxxx
+          operator_network: Digicel (Fiji) Ltd
