--- a/issues/1168/amendments.yaml
+++ b/issues/1168/amendments.yaml
@@ -2,7 +2,7 @@ messages:
   - type: amendment
     target:
       publication: R_SP_LM.V
-      position_on: 2018
+      position_on: 2018-01-01
     contents:
       '0': a
       '1': m
@@ -89,7 +89,7 @@ messages:
   - type: amendment
     target:
       publication: R_SP_LN.VIII
-      position_on: 2016
+      position_on: 2016-01-01
     contents:
       '0': a
       '1': m
