--- a/issues/1169/amendments.yaml
+++ b/issues/1169/amendments.yaml
@@ -2,7 +2,7 @@ messages:
   - type: amendment
     target:
       publication: R_SP_LM.V
-      position_on: 2018
+      position_on: 2018-01-01
     contents:
       '0': a
       '1': m
