--- a/issues/1173/amendments.yaml
+++ b/issues/1173/amendments.yaml
@@ -2,7 +2,7 @@ messages:
   - type: amendment
     target:
       publication: R_SP_LM.V
-      position_on: 2018
+      position_on: 2019-01-01
     contents:
       '0': a
       '1': m
@@ -2484,7 +2484,7 @@ messages:
               - type: text
                 text: >-
                   For their numbering website, or when sending their information
-                  to ITU/TSB (e-mail: 
+                  to ITU/TSB (e-mail:
               - type: text
                 marks:
                   - type: link
