--- a/issues/1106/general.yaml
+++ b/issues/1106/general.yaml
@@ -6,7 +6,7 @@ messages:
     type: running_annexes
   - type: approved_recommendations
     items:
-      'T G.997.2 (2015) Amd 2 ': 2016-07-01
+      'G.997.2 (2015) Amd 2 ': 2016-07-01
       'G.1011 ': 2016-07-01
       'G.1022 ': 2016-07-01
       'G.1050 ': 2016-07-01
