--- a/issues/1131/general.yaml
+++ b/issues/1131/general.yaml
@@ -14,7 +14,7 @@ messages:
       'G.987.2 (2016) Amd 1 ': 2017-08-01
       'G.989.2 (2014) Amd 2 ': 2017-08-01
       'G.997.2 (2015) Cor 3 ': 2017-08-01
-      'T G.998.4 (2015) Cor 1 ': 2017-08-01
+      'G.998.4 (2015) Cor 1 ': 2017-08-01
       'G.7714.1/Y.1705.1 ': 2017-08-01
       'G.8032/Y.1344 (2015) Cor 1 ': 2017-08-01
       'G.8051/Y.1345 (2015) Amd 1 ': 2017-08-01
