--- a/issues/1169/general.yaml
+++ b/issues/1169/general.yaml
@@ -8,7 +8,7 @@ messages:
     by: TSB Circular 153 of 11 March 2019
     procedures: Resolution 1
     items:
-      E.118 (2006) Amendment 1: 2019-02-01
+      E.118 (2006) Amd 1: 2019-02-01
       E.169.1: 2019-03-01
       E.217: 2019-03-01
   - type: mid
