--- a/issues/1083/general.yaml
+++ b/issues/1083/general.yaml
@@ -10,7 +10,7 @@ messages:
       'G.798 (2012) Cor 1 ': 2015-08-01
       'G.824 (2000) Cor 1 ': 2015-08-01
       'G.873.2 ': 2015-08-01
-      ' G.874 (2013) Amd 1 ': 2015-08-01
+      'G.874 (2013) Amd 1 ': 2015-08-01
       'G.874.1 (2012) Amd 2 ': 2015-08-01
       'G.989.1 (2013) Amd 1 ': 2015-08-01
       'G.7711/Y.1702 ': 2015-08-01
@@ -23,7 +23,7 @@ messages:
       'G.8260 ': 2015-08-01
       'G.8273/Y.1368 (2013) Amd 2 ': 2015-08-01
       'G.8273.2/Y.1368.2 (2014) Amd 2 ': 2015-08-01
-      G.9802 (2015) Amd : 2015-08-01
+      G.9802 (2015) Amd 1: 2015-08-01
       'G.9903 (2014) Amd 1 ': 2015-08-01
       J.230: 2015-08-01
       'J.1004 ': 2015-08-01
