--- a/issues/1121/general.yaml
+++ b/issues/1121/general.yaml
@@ -6,7 +6,7 @@ messages:
     type: running_annexes
   - type: approved_recommendations
     items:
-      'T E.802 (2007) Amd 1 ': 2017-03-01
+      'E.802 (2007) Amd 1 ': 2017-03-01
       'E.811 ': 2017-03-01
       'E.847 ': 2017-03-01
       'F.743.4 ': 2017-03-01
@@ -28,7 +28,7 @@ messages:
       'P.1110 ': 2017-03-01
       'P.1120 ': 2017-03-01
       'P.1140 ': 2017-03-01
-      ' P.1310 ': 2017-03-01
+      'P.1310 ': 2017-03-01
       'T.621 ': 2017-03-01
       'Y.1545.1 ': 2017-03-01
     by: AAP-08
