--- a/issues/991/general.yaml
+++ b/issues/991/general.yaml
@@ -7,13 +7,13 @@ messages:
   - type: approved_recommendations
     items:
       'X.680 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.681 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.690 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      ' ITU-T X.691 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.692 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.693 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.694 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
-      'ITU-T X.891 (2005) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.681 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.690 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.691 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.692 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.693 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.694 (2008) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'X.891 (2005) Cor 1 ': 2011-09-30T22:00:00.000Z
       'X.1080.1 ': 2011-09-30T22:00:00.000Z
       'X.1081 (2004) Amd 3 ': 2011-09-30T22:00:00.000Z
       'X.1193 ': 2011-09-30T22:00:00.000Z
