--- a/issues/993/general.yaml
+++ b/issues/993/general.yaml
@@ -7,7 +7,7 @@ messages:
   - type: approved_recommendations
     items:
       'G.992.3 (2009) Amd 4 ': 2011-09-30T22:00:00.000Z
-      'T G.994.1 (2007) Cor 1 ': 2011-09-30T22:00:00.000Z
+      'G.994.1 (2007) Cor 1 ': 2011-09-30T22:00:00.000Z
       'G.997.1 (2009) Cor 2 ': 2011-09-30T22:00:00.000Z
       'G.7044/Y.1347 ': 2011-09-30T22:00:00.000Z
       'G.8013/Y.1731 (2011) Cor 1 ': 2011-09-30T22:00:00.000Z
