--- a/issues/1225/general.yaml
+++ b/issues/1225/general.yaml
@@ -506,7 +506,7 @@ messages:
                   - type: paragraph
                     content:
                       - type: text
-                        text: "The maximum number length (excluding the country code) is:\_\_ Nine (9) digits"
+                        text: "The maximum number length (excluding the country code) is:\_\_ Nine (9) digits.  "
       - country_name:
           en: 'Malta '
         phone_code: '356'
